--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,4 +30,6 @@ arrayvec = "0.4"
 clippy = {version = "0.0", optional = true}
 rand = "0.4"
 libc = "0.2"
-rustc-serialize = "0.3"
+
+[dev-dependencies]
+hex = "0.3.1"
