--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,15 +21,25 @@ cfg-if = "0.1"
 name = "secp256k1"
 path = "src/lib.rs"
 
-[features]
-unstable = []
-default = []
-dev = ["clippy"]
-
 [dependencies]
-arrayvec = "0.4"
-clippy = {version = "0.0", optional = true}
-rand = "0.4"
+sr-std = { git = "https://github.com/chainx-org/sr-std", default-features = false }
+libc = { git = "https://github.com/rust-lang/libc", default-features = false }
+arrayvec = { version = "0.4", default-features = false }
+clippy = { version = "0.0", optional = true }
+rand = { version = "0.4", optional = true }
 
 [dev-dependencies]
 hex = "0.3.1"
+
+[features]
+default = ["std"]
+unstable = []
+dev = ["clippy"]
+std = [
+    "sr-std/std",
+    "arrayvec/std",
+    "libc/use_std",
+    "clippy",
+    "rand",
+]
+
