--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,4 @@
 [package]
-
 name = "eth-secp256k1"
 version = "0.5.7"
 authors = [ "Dawid Ciężarkiewicz <dpc@ucore.info>",
@@ -11,20 +10,22 @@ documentation = "https://www.wpsoftware.net/rustdoc/secp256k1/"
 description = "Fork of Rust bindings for Pieter Wuille's `libsecp256k1` library. Implements ECDSA for the SECG elliptic curve group secp256k1 and related utilities."
 keywords = [ "crypto", "ECDSA", "secp256k1", "libsecp256k1", "bitcoin" ]
 readme = "README.md"
-
 build = "build.rs"
+
 [build-dependencies]
 cc = "1.0"
-cfg-if = "0.1"
+cfg-if = { version = "0.1" }
 
 [lib]
 name = "secp256k1"
 path = "src/lib.rs"
+crate_type = ["cdylib"]
 
 [dependencies]
 sr-std = { git = "https://github.com/chainx-org/sr-std", default-features = false }
 libc = { git = "https://github.com/rust-lang/libc", default-features = false }
 arrayvec = { version = "0.4", default-features = false }
+cfg-if = { version = "0.1" }
 clippy = { version = "0.0", optional = true }
 rand = { version = "0.4", optional = true }
 
@@ -32,7 +33,7 @@ rand = { version = "0.4", optional = true }
 hex = "0.3.1"
 
 [features]
-default = ["std"]
+default = []
 unstable = []
 dev = ["clippy"]
 std = [
